# ProyectoFinal_CGeIHC

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Animations/: marble.json
assets/Models/: 2b.mtl  2b_walk.fbx  Coin.mtl  Flipper.mtl  FlipperH.mtl  Lever.mtl  MaquinaCristal.mtl  MaquinaPinball.mtl  ModeloMaquina.mtl  NoraF.mtl  Pico_G.mtl  Resorte.mtl  Triangle.mtl  Walking.fbx  basePinball.mtl  canica.mtl  muneco_Hielo.mtl  pinballFRIO.mtl  pod.mtl  sstubby.mtl
assets/Models/ExtraModels/: Building.mtl
assets/Models/Marx/: Body.mtl  Brazo1.mtl  Brazo2.mtl  Rotor.mtl
assets/Textures/: Canica_text.psd  Cristal.psd  NumerosMarcador.psd  PanelFontal.psd  PuenteDerechoBaseColor.psd  wip_texture.psd
enc_temp_folder/63f54cd512676389e44aac65975211a7/: main.cpp
shaders/: shader.vert  shader_bone.vert  shader_light.frag  shader_light.vert
src/: BasicMesh.h  BasicPrimitives.cpp  BasicPrimitives.h  Camera.cpp  Camera.h  GlobalConstants.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Window.cpp  Window.h  main.cpp
src/Animation/: Animation.cpp  Animation.h  BoneAnimation.cpp  BoneAnimation.h  BoneAnimator.cpp  BoneAnimator.h  KeyFrameAnimation.cpp  KeyFrameAnimation.h
src/Audio/: AudioController.cpp  AudioController.h  AudioDevice.cpp  AudioDevice.h  AudioSource.cpp  AudioSource.h
src/Entity/: Entity.cpp  Entity.h  Player.cpp  Player.h  SimpleEntity.cpp  SimpleEntity.h
src/Exceptions/: Exceptions.h
src/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  LightCollection.cpp  LightCollection.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/Utils/: Assimp2Glm.cpp  Assimp2Glm.h  ImageUtils.cpp  ImageUtils.h  Logger.cpp  Logger.h  ModelMatrix.cpp  ModelMatrix.h  PathUtils.cpp  PathUtils.h
src/camera/: Camera.cpp  Camera.h  CameraCollection.cpp  CameraCollection.h  FreeCamera.cpp  FreeCamera.h  ICamera.h  OldCameraCollection.cpp  OldCameraCollection.h  PlayerCamera.cpp  PlayerCamera.h  StaticCamera.cpp  StaticCamera.h
src/input/: KeyboardInput.cpp  KeyboardInput.h  MouseInput.cpp  MouseInput.h
src/model/: BasicMesh.cpp  BasicMesh.h  BasicPrimitives.cpp  BasicPrimitives.h  Bone.cpp  Bone.h  BoneMesh.cpp  BoneMesh.h  BoneModel.cpp  BoneModel.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshPrimitive.cpp  MeshPrimitive.h  Model.cpp  Model.h  ModelCollection.cpp  ModelCollection.h  Texture.cpp  Texture.h
